# KWURify

./: .gitignore  DOCKERFILE  README.md  app.py  hello.py  playground2.ipynb  pyproject.toml
app/: __init__.py
kwurify/: pyvenv.cfg
kwurify-docs/: mkdocs.yml
kwurify-docs/docs/: index.md
static/css/: styles.css
static/js/: slider.js
templates/: choose_playlist.html  index.html  playlist_embed.html
